testdata/EtaX/EtaX.prop/EtaX.prop.06.check
// src:   val t2g: Any = prop() _
// 2.13-base error
target/testdata/EtaX/EtaX.prop.06.scala:13: error: not enough arguments for method apply: (i: Int): Char in class StringOps.
Unspecified value parameter i.
  val t2g: Any = prop() _
                     ^
1 error

// 2.13-head error <no change>
// 2.13-new  error <no change>
// 3.0-old   error
-- [E099] Syntax Migration Warning: target/testdata/EtaX/EtaX.prop.06.scala:13:24 
13 |  val t2g: Any = prop() _
   |                 ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type <error unspecified error>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- Error: target/testdata/EtaX/EtaX.prop.06.scala:13:21 ------------------------
13 |  val t2g: Any = prop() _
   |                 ^^^^^^
   |        missing argument for parameter i of method apply: (i: Int): Char
1 warning found
1 error found

// 3.0       error
-- [E099] Syntax Error: target/testdata/EtaX/EtaX.prop.06.scala:13:24 ----------
13 |  val t2g: Any = prop() _
   |                 ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type <error unspecified error>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found

// 3.1-migr  error
-- [E099] Syntax Migration Warning: target/testdata/EtaX/EtaX.prop.06.scala:13:24 
13 |  val t2g: Any = prop() _
   |                 ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type <error unspecified error>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

-- Error: target/testdata/EtaX/EtaX.prop.06.scala:13:21 ------------------------
13 |  val t2g: Any = prop() _
   |                 ^^^^^^
   |        missing argument for parameter i of method apply: (i: Int): Char
1 warning found
1 error found

// 3.1       error
-- [E099] Syntax Error: target/testdata/EtaX/EtaX.prop.06.scala:13:24 ----------
13 |  val t2g: Any = prop() _
   |                 ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type <error unspecified error>

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found


error error error error error error error
